--- a/assets/global.css
+++ b/assets/global.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,600);
 
 html, button, input, select, textarea,
 .pure-g [class *= "pure-u"] {
@@ -8,6 +8,7 @@ html, button, input, select, textarea,
 
 html, body {
   background: #141414;
+  color: white;
 }
 
 header.main {
@@ -18,6 +19,7 @@ header.main {
   background: -o-linear-gradient(top, #FFFDA0 0%,#ffef5e 75%);
   background: -ms-linear-gradient(top, #FFFDA0 0%,#ffef5e 75%);
   background: linear-gradient(to bottom, #FFFDA0 0%,#ffef5e 75%);
+  color: #141414;
 }
 
 header.main h1 {
@@ -49,6 +51,7 @@ header.main h2 p {
 #toc {
   max-width: 1024px;
   margin: auto;
+  color: #141414;
 }
 
 #toc table {
