--- a/assets/global.css
+++ b/assets/global.css
@@ -174,6 +174,12 @@ header.main h2 p {
   background-color: white;
 }
 
+#toc td a {
+  color: #141414;
+  text-decoration: none;
+  margin-right: .25em;
+}
+
 #toc td.unsupported {
   color: #CCC;
 }
