--- a/_src/simple-walkthrough-template.html.hbs
+++ b/_src/simple-walkthrough-template.html.hbs
@@ -46,6 +46,6 @@
     <script src="../assets/simple-walkthrough.system.config.js"></script>
 
     <script type="application/javascript;version=1.7" src="../assets/repl.js"></script>
-    <script>System.import('simple-walkthrough-setup').then(function (m) { m.install('{{key}}'); });</script>
+    <script>System.import('simple-walkthrough-setup').then(function (m) { m.install('{{{key}}}'); });</script>
   </body>
 </html>
