--- a/assets/global.css
+++ b/assets/global.css
@@ -1,4 +1,63 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,600);
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Open Sans Light'), local(OpenSans-Light), url(./Open_Sans/OpenSans-Light.ttf);
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans'), local(OpenSans), url(./Open_Sans/OpenSans-Regular.ttf);
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Open Sans Semibold'), local(OpenSans-Semibold), url(./Open_Sans/OpenSans-Semibold.ttf);
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Open Sans Bold'), local(OpenSans-Bold), url(./Open_Sans/OpenSans-Bold.ttf);
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 800;
+  src: local('Open Sans Extrabold'), local(OpenSans-Extrabold), url(./Open_Sans/OpenSans-Extrabold.ttf);
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 300;
+  src: local('Open Sans Light Italic'), local(OpenSansLight-Italic), url(./Open_Sans/OpenSans-LightItalic.ttf);
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Open Sans Italic'), local(OpenSans-Italic), url(./Open_Sans/OpenSans-Italic.ttf);
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 600;
+  src: local('Open Sans Semibold Italic'), local(OpenSans-SemiboldItalic), url(./Open_Sans/OpenSans-SemiboldItalic.ttf);
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 700;
+  src: local('Open Sans Bold Italic'), local(OpenSans-BoldItalic), url(./Open_Sans/OpenSans-BoldItalic.ttf);
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 800;
+  src: local('Open Sans Extrabold Italic'), local(OpenSans-ExtraboldItalic), url(./Open_Sans/OpenSans-ExtraboldItalic.ttf);
+}
 
 html, button, input, select, textarea,
 .pure-g [class *= "pure-u"] {
