Change play icon to cog for "evaluate".

--- a/_src/simple-walkthrough-template.html.hbs
+++ b/_src/simple-walkthrough-template.html.hbs
@@ -20,7 +20,7 @@
       <div class="pure-u-1-2">
         <form class="pure-form unsubmitable">
           <fieldset>
-            <button id="evaluate" class="pure-button pure-button-primary"><span class="fa fa-play"></span> Evaluate (⌘+E)</button>
+            <button id="evaluate" class="pure-button pure-button-primary"><span class="fa fa-cog"></span> Evaluate (⌘+E)</button>
           </fieldset>
         </form>
         <div class="editor-holder">
