Add the click noise to the functionality of the walkthroughs.

--- a/_src/narrated-walkthrough-template.html.hbs
+++ b/_src/narrated-walkthrough-template.html.hbs
@@ -16,6 +16,10 @@
         </path>
       </svg>
     </div>
+    <audio id="click" preload="auto">
+      <source src="./click.ogg">
+      <source src="./click.mp3">
+    </audio>
     <audio id="narration" preload="auto">
       {{#each audioSources}}
         <source src="./{{this}}">
