--- a/_src/narrated-walkthrough-template.html.hbs
+++ b/_src/narrated-walkthrough-template.html.hbs
@@ -29,9 +29,9 @@
       <div class="pure-u-1-2">
         <form class="pure-form unsubmitable">
           <fieldset>
-            <button id="rewind" class="pure-button pure-button-primary" disabled><span class="fa fa-backward"></span></button>
+            <button id="rewind" class="pure-button pure-button-primary" disabled><span class="fa fa-step-backward"></span></button>
             <button id="play" class="pure-button pure-button-primary" disabled><span class="fa fa-play"></span> <span class="label">Play</span> [<span class="time">0:00</span>]</button>
-            <button id="step-forward" class="pure-button pure-button-primary" disabled><span class="fa fa-step-forward"></span></button>
+            <button id="step-forward" class="pure-button pure-button-primary" disabled><span class="fa fa-forward"></span></button>
             <button id="evaluate" class="pure-button pure-button-primary" disabled><span class="fa fa-cog"></span> Evaluate (⌘+E)</button>
           </fieldset>
         </form>
