Quiet the click of the keyboard.

--- a/_src/narrated-walkthrough-template.html.hbs
+++ b/_src/narrated-walkthrough-template.html.hbs
@@ -16,7 +16,7 @@
       </path>
     </svg>
   </div>
-  <audio id="click" preload="auto">
+  <audio id="click" preload="auto" volume="0.25">
     <source src="./click.ogg"></source>
     <source src="./click.mp3"></source>
   </audio>
